--- a/requirements.txt
+++ b/requirements.txt
@@ -14,14 +14,17 @@ exceptiongroup==1.3.0
 fastapi==0.115.13
 h11==0.16.0
 idna==3.10
+imageio==2.37.0
 Jinja2==3.1.6
 langcodes==3.5.0
 language_data==1.3.0
+lazy_loader==0.4
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 murmurhash==1.0.13
+networkx==3.4.2
 numpy==2.2.6
 opencv-python==4.11.0.86
 packaging==25.0
@@ -34,6 +37,8 @@ pytesseract==0.3.13
 python-multipart==0.0.20
 requests==2.32.4
 rich==14.0.0
+scikit-image==0.25.2
+scipy==1.15.3
 shellingham==1.5.4
 smart-open==7.1.0
 sniffio==1.3.1
@@ -43,6 +48,7 @@ spacy-loggers==1.0.5
 srsly==2.5.1
 starlette==0.46.2
 thinc==8.3.6
+tifffile==2025.5.10
 tqdm==4.67.1
 typer==0.16.0
 typing-inspection==0.4.1
