--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cloudpathlib==0.21.1
 colorama==0.4.6
 confection==0.1.5
 cymem==2.0.11
+dnspython==2.7.0
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
 exceptiongroup==1.3.0
 fastapi==0.115.13
@@ -33,6 +34,7 @@ preshed==3.0.10
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
+pymongo==4.13.2
 pytesseract==0.3.13
 python-multipart==0.0.20
 requests==2.32.4
