--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==5.0.1
+billiard==4.2.1
 blis==1.3.0
 catalogue==2.0.10
+celery==5.5.3
 certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
 cloudpathlib==0.21.1
 colorama==0.4.6
 confection==0.1.5
@@ -17,6 +24,7 @@ h11==0.16.0
 idna==3.10
 imageio==2.37.0
 Jinja2==3.1.6
+kombu==5.5.4
 langcodes==3.5.0
 language_data==1.3.0
 lazy_loader==0.4
@@ -31,17 +39,21 @@ opencv-python==4.11.0.86
 packaging==25.0
 pillow==11.2.1
 preshed==3.0.10
+prompt_toolkit==3.0.51
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
 pymongo==4.13.2
 pytesseract==0.3.13
+python-dateutil==2.9.0.post0
 python-multipart==0.0.20
+redis==6.2.0
 requests==2.32.4
 rich==14.0.0
 scikit-image==0.25.2
 scipy==1.15.3
 shellingham==1.5.4
+six==1.17.0
 smart-open==7.1.0
 sniffio==1.3.1
 spacy==3.8.7
@@ -55,8 +67,11 @@ tqdm==4.67.1
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.34.3
+vine==5.1.0
 wasabi==1.1.3
+wcwidth==0.2.13
 weasel==0.4.1
 wrapt==1.17.2
